RESOLVED FIXED316259
[macOS] Certain build configurations failing due to NSViewCornerConfiguration availability
https://bugs.webkit.org/show_bug.cgi?id=316259
Summary [macOS] Certain build configurations failing due to NSViewCornerConfiguration...
Lily Spiniolas
Reported 2026-06-03 15:31:14 PDT
Attachments
Lily Spiniolas
Comment 1 2026-06-03 15:51:34 PDT
EWS
Comment 2 2026-06-03 16:11:08 PDT
Committed 314505@main (c02af6edab45): <https://commits.webkit.org/314505@main> Reviewed commits have been landed. Closing PR #66409 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.