[macOS] Certain build configurations failing due to NSViewCornerConfiguration availability https://bugs.webkit.org/show_bug.cgi?id=316259 rdar://178636492

Reviewed by Abrar Rahman Protyasha.

Use ALLOW_NEW_API_WITHOUT_GUARDS_BEGIN/ALLOW_NEW_API_WITHOUT_GUARDS_END
where necessary.

* Source/WebKit/UIProcess/API/mac/WKWebViewMac.mm:
(-[WKWebView _viewDidChangeEffectiveCornerRadii]):
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/mac/ScrollbarTests.mm:
(TestWebKitAPI::verifyVerticalScrollbarFrameRectIsCorrect):
(TestWebKitAPI::verifyHorizontalScrollbarFrameRectIsCorrect):
(TestWebKitAPI::TEST(ScrollbarTests, ScrollbarAvoidanceForTitledWindow)):
(TestWebKitAPI::TEST(ScrollbarTests, ScrollbarAvoidanceForWindowWithUnifiedCompactToolbar)):
(TestWebKitAPI::TEST(ScrollbarTests, ScrollbarAvoidanceForWindowWithUnifiedToolbar)):

Canonical link: https://commits.webkit.org/314505@main